--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -10,7 +10,7 @@
 <body class="dark-theme">
   <header>
     <h1>
-      <a href="HOME.html" id="home-link">Resource Version Control</a>
+      <a href="index.html" id="home-link">Resource Version Control</a>
     </h1>
     <nav>
       <ul>
