--- a/software.html
+++ b/software.html
@@ -13,7 +13,7 @@
     <header>
         <!-- Department Title -->
         <h1>
-            <a href="HOME.html" id="home-link">Software and Programming Resources</a>
+            <a href="index.html" id="home-link">Software and Programming Resources</a>
           </h1>
         <nav>
             <!-- Theme Switch -->
