--- a/Syllabus.html
+++ b/Syllabus.html
@@ -96,7 +96,7 @@
             if (window.location.pathname === '/HOME.html' || window.location.pathname === '/') {
                 window.location.reload(); // Reloads the page if it's already the homepage
             } else {
-                window.location.href = 'HOME.html'; // Navigates to the homepage if not already there
+                window.location.href = 'index.html'; // Navigates to the homepage if not already there
             }
         });
         document.addEventListener('DOMContentLoaded', function () {
