--- a/video_resources.html
+++ b/video_resources.html
@@ -207,7 +207,7 @@
     </main>
 
     <footer>
-        <a href="HOME.html"><p>&copy; 2024 Video Resources</p></a>
+        <a href="index.html"><p>&copy; 2024 Video Resources</p></a>
         <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
     </footer>
 
