--- a/Syllabus.html
+++ b/Syllabus.html
@@ -82,7 +82,7 @@
     </main>
 
     <footer>
-        <a href="HOME.html"><p>&copy; 2024 Course Syllabus</p></a>
+        <a href="index.html"><p>&copy; 2024 Course Syllabus</p></a>
         <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
         <ul class="social-media">
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
