--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -124,7 +124,7 @@
     </section>
   </main>
   <footer>
-    <a href="HOME.html"><p>&copy; 2024 Resource Version Control</p></a>
+    <a href="index.html"><p>&copy; 2024 Resource Version Control</p></a>
     <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
   </footer>
 
