--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section id="info-bulletin" class="info-bulletin">
             <div class="ticker">
-                <p>📈Updates are on the goo!!!📈</p>
+                <p><a href="https://gdg.community.dev/events/details/google-gdg-on-campus-sir-chhotu-ram-institute-of-engineering-and-technology-meerut-india-presents-build-with-ai/">RSVP FOR BUILD WIITH AI!!</a></s></p>
             </div>
         </section>
         <section id="last-year-questions" class="content-section" onclick="window.location.href='last_year_questions.html';">
