--- a/video_resources.html
+++ b/video_resources.html
@@ -168,7 +168,7 @@
                 </a>
             </div>
             <div class="video-row">
-                <a href="https://www.youtube.com/watch?v=0bmKelenYVg" target="_blank" class="video-box" data-year="year2" data-semester="sem3">
+                <a href="https://www.youtube.com/playlist?list=PLqzoL9-eJTNBDdKgJgJzaQcY6OXmsXAHU" target="_blank" class="video-box" data-year="year2" data-semester="sem3">
                     <h3>Statistical Computing With R Programming</h3>
                     <p>This video thoroughly covers all the core components of the R language course, providing a
                         comprehensive overview of the essential topics.</p>
