--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Department of Computer Application</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="icons/emoji.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
     <meta name="google-site-verification" content="LnqIIPm485vuQpL_u_BqDVkLiLMI0ibAnKMTTc3jP_0" />
 
 </head>
@@ -28,11 +28,11 @@
                 <li class="theme-switch" id="theme-switch"></li>
                 <li class="profile-icon">
                     <a href="https://www.ccsuforms.in/scriet_newreg/login.php">
-                        <img src="icons/icons8-test-account-100.png" alt="Profile">
+                        <img src="styles/icons/icons8-test-account-100.png" alt="Profile">
                     </a>
                 </li>
                 <li class="contact-icon">
-                    <a href="contacts/contact.html"> <img src="icons/world-wide-web (1).png" alt="Contact" id="contact-icon"></a>
+                    <a href="contacts/contact.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact" id="contact-icon"></a>
                 </li>
             </ul>
         </nav>
