--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resource Version Control</title>
-  <link rel="stylesheet" href="stylelastyr.css">
-  <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
+  <link rel="stylesheet" href="styles/stylelastyr.css">
+  <link rel="shortcut icon" href="styles/emoji.png" type="image/x-icon">
   <link rel="stylesheet" href="styles/download-lastyr.css">
 </head>
 
@@ -19,7 +19,7 @@
       <ul>
         <li>
           <a href="contacts/contact.html">
-            <img src="icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
+            <img src="styles/icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
           </a>
         </li>
       </ul>
