--- a/software.html
+++ b/software.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software and Programming Resources</title>
-    <link rel="stylesheet" href="soft.css">
-    <link rel="shortcut icon" href="icons/emoji.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/soft.css">
+    <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
 </head>
 <body class="light">
 
@@ -22,7 +22,7 @@
                 <!-- Contact Icon -->
                 <li class="contact-icon">
                     <a href="contacts/contact.html">
-                        <img src="icons/world-wide-web (1).png" alt="Contact" id="contact-icon">
+                        <img src="styles/icons/world-wide-web (1).png" alt="Contact" id="contact-icon">
                     </a>
                 </li>
             </ul>
@@ -39,25 +39,25 @@
                 <h1>Code Editors</h1>
                 <div class="card-grid">
                     <div class="card">
-                        <img src="code-icons/icons8-visual-studio-48.png" alt="VS Code">
+                        <img src="styles/code-icons/icons8-visual-studio-48.png" alt="VS Code">
                         <h3>Visual Studio Code</h3>
                         <p>VS Code: Lightweight, versatile coding editor.</p>
                         <a href="https://code.visualstudio.com/Download">Download</a>
                     </div>
                     <div class="card">
-                        <img src="code-icons/rstudio.svg" alt="R studio">
+                        <img src="styles/code-icons/rstudio.svg" alt="R studio">
                         <h3>R Studio</h3>
                         <p>RStudio: IDE for R programming, statistics.</p>
                         <a href="https://posit.co/download/rstudio-desktop/">Download</a>
                     </div>
                     <div class="card">
-                        <img src="code-icons/intellij-idea.svg" alt="IntelliJ idea">
+                        <img src="styles/code-icons/intellij-idea.svg" alt="IntelliJ idea">
                         <h3>IntelliJ IDEA</h3>
                         <p>IntelliJ IDEA: Java-based IDE, development tool.</p>
                         <a href="https://www.jetbrains.com/idea/download/?section=windows">Download</a>
                     </div>
                     <div class="card">
-                        <img src="code-icons/spyder_logo.svg" alt="spyder_ide">
+                        <img src="styles/code-icons/spyder_logo.svg" alt="spyder_ide">
                         <h3>Spyder-IDE</h3>
                         <p>Spyder IDE: Python scientific development environment.</p>
                         <a href="https://www.spyder-ide.org/download/">Download</a>
@@ -70,13 +70,13 @@
                 <h1>Programming Files</h1>
                 <div class="card-grid">
                     <div class="card">
-                        <img src="code-icons/mysql-svgrepo-com.svg" alt="mysql">
+                        <img src="styles/code-icons/mysql-svgrepo-com.svg" alt="mysql">
                         <h3>MySql</h3>
                         <p>Download mysql For Data Base Managment System Intro.</p>
                         <a href="https://dev.mysql.com/downloads/installer/">Download</a>
                     </div>
                     <div class="card">
-                        <img src="code-icons/java-icon.svg" alt="Java">
+                        <img src="styles/code-icons/java-icon.svg" alt="Java">
                         <h3>Java</h3>
                         <p>Download JDK for java Installation.</p>
                         <a href="https://www.oracle.com/java/technologies/downloads/">Download</a>
