--- a/video_resources.html
+++ b/video_resources.html
@@ -14,8 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Resources - Department of Computer Application</title>
-    <link rel="stylesheet" href="stylevideo.css">
-    <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/stylevideo.css">
+    <link rel="shortcut icon" href="styles/emoji.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -28,7 +28,7 @@
             <ul>
                 <li>
                     <a href="contacts/contact.html">
-                        <img src="icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
+                        <img src="styles/icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
                     </a>
                 </li>
                 <li>
