--- a/Syllabus.html
+++ b/Syllabus.html
@@ -14,8 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Syllabus - Department of Computer Application</title>
-    <link rel="stylesheet" href="syllabusstyle.css">
-    <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/syllabusstyle.css">
+    <link rel="shortcut icon" href="styles/emoji.png" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <ul>
                 <li>
                     <a href="contacts/contact.html">
-                        <img src="icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
+                        <img src="styles/icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
                     </a>
                 </li>
                 <li>
