--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -156,10 +156,7 @@
   </footer>
 
   <!-- Add JavaScript file or inline script -->
-  <script src="scriptlastyr.js">
-
- 
-
+  <script src="Js/scriptlastyr.js">
   </script>
   
 </body>
