--- a/software.html
+++ b/software.html
@@ -99,6 +99,6 @@
     
 
     <!-- JavaScript for Theme Switching -->
-    <script src="soft.js"></script>
+    <script src="Js/soft.js"></script>
 </body>
 </html>
