--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="Js/script.js"></script>
 
 </body>
 </html>
