--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section id="info-bulletin" class="info-bulletin">
             <div class="ticker">
-            <p>📈UPDATES ARE ON THE WAY📈</p>
+                <a href="https://scholarship.up.gov.in/LoginStudentPostRenew.aspx"><p class="tickker" > 💲Click for scholarship renewal💲</p></a>
             </div>
         </section>
         <section id="last-year-questions" class="content-section" onclick="window.location.href='last_year_questions.html';">
