--- a/index.html
+++ b/index.html
@@ -52,9 +52,14 @@
                 <a href="https://scholarship.up.gov.in/LoginStudentPostRenew.aspx"><p class="tickker" > 💲Click for scholarship renewal💲</p></a>
             </div>
         </section>
+
         <section id="last-year-questions" class="content-section" onclick="window.location.href='last_year_questions.html';">
             <h2>📄 Previous-years/ Course Books</h2>
             <p>Find the previous year's exam papers here.</p>
+        </section>
+        <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
+            <h2> 💲 Scholarship </h2>
+            <p>Renewe your Scholarship</p>
         </section>
         <section id="last-year-questions" class="content-section" onclick="window.location.href='software.html';">
             <h2>⎋ Softwares</h2>
