--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <h2>📄 Previous-years/ Course Books</h2>
             <p>Find the previous year's exam papers here.</p>
         </section>
-        <!-- <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
+        <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
             <h2> 💲 Scholarship </h2>
             <p>Renewe your Scholarship</p>
-        </section> -->
+        </section>
         <section id="last-year-questions" class="content-section" onclick="window.location.href='software.html';">
             <h2>⎋ Softwares</h2>
             <p>Discover Software Tools Relevant to Your Courses</p>
