--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li class="theme-switch" id="theme-switch"></li>
                 <li class="profile-icon">
-                    <a href="https://www.ccsuforms.in/scriet_newreg/login.php">
+                    <a href="scholarship.html">
                         <img src="styles/icons/icons8-test-account-100.png" alt="Profile">
                     </a>
                 </li>
