--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li class="theme-switch" id="theme-switch"></li>
                 <li class="profile-icon">
-                    <a href="scholarship.html">
+                    <a href="https://www.ccsuforms.in/scriet_newreg/login.php">
                         <img src="styles/icons/icons8-test-account-100.png" alt="Profile">
                     </a>
                 </li>
@@ -49,7 +49,7 @@
         </section>
         <section id="info-bulletin" class="info-bulletin">
             <div class="ticker">
-                <a href="https://scholarship.up.gov.in/LoginStudentPostRenew.aspx"><p class="tickker" > 💲Click for scholarship renewal💲</p></a>
+                <a href="scholarship.html"><p class="tickker" > 💲Click for scholarship renewal💲</p></a>
             </div>
         </section>
 
