registraion for 1 st year

--- a/scholarship.html
+++ b/scholarship.html
@@ -152,7 +152,10 @@
           <li style="list-style: none; font-weight: 600;">(Every photocopy must be self-attested)</li>
         </ul>
         <button class="button1">
-          <a href="https://scholarship.up.gov.in/LoginStudentPostRenew.aspx" class="btweb">Visit Website</a>
+          <a href="https://scholarship.up.gov.in/LoginStudentPostRenew.aspx" class="btweb">Renewal</a>
+        </button>
+        <button class="button1">
+          <a href="https://scholarship.up.gov.in/RegistrationNew.aspx" class="btweb">Fresher Registraion</a>
         </button>
       </div>
     </article>
