--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -100,9 +100,10 @@
               <a href="https://docs.google.com/spreadsheets/d/1TsNiaQ-Jqu5kqnvItDyKsYte_H7605cg/edit?usp=sharing&ouid=116669691422581959167&rtpof=true&sd=true"
                 class="button" download>Open - Sheet</a>
               <div class="swipe-container">
-                <div class="swipe-button"
-                  data-url="https://drive.google.com/uc?export=download&id=12pVWcVrdIRlFqC8n6GW6Q9vYJdVpbl8r">
-                  <span class="swipe-text">Swipe to Download</span>
+                <div class="swipe-container">
+                  <div class="swipe-button" data-url="https://drive.google.com/uc?export=download&id=1SOP_pMF7ixSME_-wBvVFIqMB4Y14mgGx">
+                    <span class="swipe-text">Swipe to Download</span>
+                  </div>
                 </div>
               </div>
             </div>
