updated link for the last year questions

--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -100,14 +100,14 @@
               <a href="https://docs.google.com/spreadsheets/d/1TsNiaQ-Jqu5kqnvItDyKsYte_H7605cg/edit?usp=sharing&ouid=116669691422581959167&rtpof=true&sd=true"
                 class="button" download>Open - Sheet</a>
               <div class="swipe-container">
-                <div class="swipe-container">
-                  <div class="swipe-button" data-url="https://drive.google.com/uc?export=download&id=1SOP_pMF7ixSME_-wBvVFIqMB4Y14mgGx">
-                    <span class="swipe-text">Swipe to Download</span>
-                  </div>
+                <div class="swipe-button"
+                  data-url="https://drive.google.com/file/d/1SOP_pMF7ixSME_-wBvVFIqMB4Y14mgGx/view?usp=sharing">
+                  <span class="swipe-text">Swipe to Download</span>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="card">
             <div class="card-header">
               <h3>Year 2 Sem-4 BSCHCS</h3>
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-
+          
         </div>
       </div>
 
