updated the icon of notifications

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QS598XH622"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-QS598XH622');
     </script>
@@ -21,7 +22,7 @@
 <body>
     <header>
         <div class="department-title" id="home-button">
-            <span class="full-title">🖥️ DCA  B.Sc (Hons) Computer Science</span>
+            <span class="full-title">🖥️ DCA B.Sc (Hons) Computer Science</span>
         </div>
         <nav>
             <ul>
@@ -32,7 +33,8 @@
                     </a>
                 </li>
                 <li class="contact-icon">
-                    <a href="contacts/contact.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact" id="contact-icon"></a>
+                    <a href="contacts/contact.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact"
+                            id="contact-icon"></a>
                 </li>
             </ul>
         </nav>
@@ -47,13 +49,18 @@
                 </h2>
             </div>
         </section>
-        <section id="info-bulletin" class="info-bulletin">
-            <div class="ticker">
-                <a href="scholarship.html"><p class="tickker" > 💲Click for scholarship renewal💲</p></a>
+        <div class="infobullet">
+            <div class="info_type">
+                <a href="scholarship.html" class="info_type"><img src="styles/icons/notifi_bl.svg" alt=""
+                        class="img_light">
+                    <img src="styles/icons/not_yl.svg" alt="" class="img_dark">
+                    <p>Scholarship Forms are live</p>
+                </a>
             </div>
-        </section>
+        </div>
 
-        <section id="last-year-questions" class="content-section" onclick="window.location.href='last_year_questions.html';">
+        <section id="last-year-questions" class="content-section"
+            onclick="window.location.href='last_year_questions.html';">
             <h2>📄 Previous-years/ Course Books</h2>
             <p>Find the previous year's exam papers here.</p>
         </section>
@@ -73,14 +80,16 @@
             <h2>📖 Course Syllabus</h2>
             <p>Review the course syllabus.</p>
         </section>
-        <section id="results" class="content-section" onclick="window.location.href='https://result.ccsuniversity.ac.in/regpvt2013.php';">
+        <section id="results" class="content-section"
+            onclick="window.location.href='https://result.ccsuniversity.ac.in/regpvt2013.php';">
             <h2> 📜 Results</h2>
             <p>Have a look at your hard work.</p>
         </section>
     </main>
 
     <footer>
-        <p class="contact-footer"><a href="https://scriet.ccsuniversity.ac.in/">&copy; 🏫 Department of Computer Application</a></p>
+        <p class="contact-footer"><a href="https://scriet.ccsuniversity.ac.in/">&copy; 🏫 Department of Computer
+                Application</a></p>
         <!-- <p>&copy; 🏫 Department of Computer Application</p> -->
         <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
         <ul class="social-media">
@@ -93,4 +102,5 @@
     <script src="Js/script.js"></script>
 
 </body>
+
 </html>
