--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                     </a>
                 </li>
                 <li class="contact-icon">
-                    <a href="contacts/contact.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact"
+                    <!-- <a href="contacts/contact.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact"
+                            id="contact-icon"></a> -->
+                    <a href="years/sem1.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact"
                             id="contact-icon"></a>
                 </li>
             </ul>
