sem1-year1 page pyqs

--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -67,12 +67,13 @@
               <h3>Year 1 Sem-1 BSCHCS</h3>
             </div>
             <div class="card-body">
-              <a href="https://docs.google.com/spreadsheets/d/1j10ulHteStdUGimq3GmW9aZn6i8cqtUZvBg1wf3G7yE/edit?usp=sharing"
-                class="button" download>Open - Sheet</a>
-              
+              <a href="years/sem1.html"
+                class="button" >Open</a>
+              <!-- <a href="https://docs.google.com/spreadsheets/d/1j10ulHteStdUGimq3GmW9aZn6i8cqtUZvBg1wf3G7yE/edit?usp=sharing"
+                class="button" download>Open - Sheet</a> -->
             </div>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-header">
               <h3>Year 1 Sem-2 BSCHCS</h3>
             </div>
@@ -86,7 +87,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -108,7 +109,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-header">
               <h3>Year 2 Sem-4 BSCHCS</h3>
             </div>
@@ -122,7 +123,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           
         </div>
       </div>
