updated colour pallet

--- a/years/sem1.html
+++ b/years/sem1.html
@@ -11,11 +11,14 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <style>
+        *{
+            font-family: 'Roboto', sans-serif;
+        }
         /* Base Styles for Larger Screens */
         body {
             background: 
-                linear-gradient(360deg, #003ee7, #0040ff, #380152, #02022d);
-            color: white;
+                linear-gradient(360deg, #344C92, #1C2751, #5572B2, #82B1D1);
+            color: rgb(0, 0, 0);
             background-size: cover;
             background-attachment: fixed;
         }
@@ -23,7 +26,7 @@
         .card {
             padding: 10px;
             margin: 30px;
-            color: rgb(254, 254, 255);
+            color: rgb(0, 0, 0);
             background-color: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(8px);
             border-radius: 20px;
@@ -44,7 +47,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(90deg, #ffb01e, #03f31f);
+            background-color: #82A1D1;
             border: none;
             border-radius: 50px;
             padding: 10px 20px;
@@ -248,7 +251,7 @@
                             semester in a single folder.</p>
                         <a href="https://drive.google.com/drive/folders/1QNV4CNv-KCXfhSwqMj9m1iiwO2SPBp3K?usp=drive_linkq"
                             target="_blank" class="btn btn-primary"
-                            style="font-size: 1.2rem; background: linear-gradient(90deg, #ff8c00, #ff4500); border: none; padding: 15px 30px; border-radius: 50px; box-shadow: 0 4px 15px rgba(255, 69, 0, 0.6);">
+                            style="font-size: 1.2rem; background: linear-gradient(#82A1D1); border: none; padding: 15px 30px; border-radius: 50px; box-shadow: 0 4px 15px rgba(41, 180, 187, 0.6);">
                             <img src="cloud-download.svg" alt="Download Icon" style="width: 24px; margin-right: 10px;">
                             Download Folder
                         </a>
