--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -98,14 +98,14 @@
               <h3>Year 2 Sem-3 BSCHCS</h3>
             </div>
             <div class="card-body">
-              <a href="https://docs.google.com/spreadsheets/d/1TsNiaQ-Jqu5kqnvItDyKsYte_H7605cg/edit?usp=sharing&ouid=116669691422581959167&rtpof=true&sd=true"
-                class="button" download>Open - Sheet</a>
-              <div class="swipe-container">
-                <div class="swipe-button"
+              <a href="years/sem3.html"
+                class="button">Open</a>
+              <!-- <div class="swipe-container">
+                 <div class="swipe-button"
                   data-url="https://drive.google.com/file/d/1egwfFP6NNWjPSeaAyahO3sYtMZ8rZOYm/view?usp=sharing">
                   <span class="swipe-text">Swipe to Download</span>
-                </div>
-              </div>
+                </div> 
+              </div> -->
             </div>
           </div>
 
