--- a/years/sem1.html
+++ b/years/sem1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sem-1</title>
+    <title>BHCS Sem-1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -16,8 +16,7 @@
         }
         /* Base Styles for Larger Screens */
         body {
-            background: 
-                linear-gradient(360deg, #344C92, #1C2751, #5572B2, #82B1D1);
+            background: linear-gradient(360deg, #344C92, #1C2751, #5572B2, #82B1D1);
             color: rgb(0, 0, 0);
             background-size: cover;
             background-attachment: fixed;
@@ -53,6 +52,7 @@
             padding: 10px 20px;
             font-weight: bold;
             transition: all 0.3s ease;
+            margin: 10px;
         }
 
         .btn-primary:hover {
@@ -171,7 +171,7 @@
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
-                        <br><br>
+                        
                         <a href="https://ia803407.us.archive.org/35/items/the-ansi-c-programming-language-by-brian-w.-kernighan-dennis-m.-ritchie.org/The%20ANSI%20C%20Programming%20Language%20by%20Brian%20W.%20Kernighan,%20Dennis%20M.%20Ritchie.pdf"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
@@ -189,7 +189,7 @@
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
-                        <br><br>
+                        
                         <a href="https://www.doc-developpement-durable.org/file/Projets-informatiques/cours-&-manuels-informatiques/htm-html-xml-ccs/Sams%20Teach%20Yourself%20HTML,%20CSS,%20and%20JavaScript%20All%20in%20One.pdf"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
@@ -218,7 +218,7 @@
             <div class="col-sm-6 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Mathematics-1</h5>
+                        <h5 class="card-title">Mathematics-I</h5>
                         <p class="card-text">Cover the foundational topics of calculus, linear algebra, and differential
                             equations essential for computing.</p>
                         <a href="https://drive.google.com/file/d/1iT9OTRSTZd5jsVB-JIhUqGxzZXbEpvni/view?usp=drive_link#"
