--- a/years/sem1.html
+++ b/years/sem1.html
@@ -10,10 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
     <style>
-        *{
+        * {
             font-family: 'Roboto', sans-serif;
         }
+
         /* Base Styles for Larger Screens */
         body {
             background: linear-gradient(360deg, #344C92, #1C2751, #5572B2, #82B1D1);
@@ -172,7 +174,7 @@
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
-                        
+
                         <a href="https://ia803407.us.archive.org/35/items/the-ansi-c-programming-language-by-brian-w.-kernighan-dennis-m.-ritchie.org/The%20ANSI%20C%20Programming%20Language%20by%20Brian%20W.%20Kernighan,%20Dennis%20M.%20Ritchie.pdf"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
@@ -190,7 +192,7 @@
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             Download PDF</a>
-                        
+
                         <a href="https://www.doc-developpement-durable.org/file/Projets-informatiques/cours-&-manuels-informatiques/htm-html-xml-ccs/Sams%20Teach%20Yourself%20HTML,%20CSS,%20and%20JavaScript%20All%20in%20One.pdf"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
