--- a/years/sem3.html
+++ b/years/sem3.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="emoji.png" type="image/x-icon">
     <style>
         * {
             font-family: 'Roboto', sans-serif;
@@ -180,7 +181,7 @@
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             2023-PYQ</a>
-                       
+
                         <a href="https://www.tutorialspoint.com/r/r_tutorial.pdf" target="_blank"
                             class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
@@ -202,7 +203,7 @@
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
                             2023-PYQ</a>
-                      
+
                         <a href="https://drive.google.com/file/d/1rFXq3m48seeiFzI6vNqiMikMZ0NNIvKl/view?usp=sharing"
                             target="_blank" class="btn btn-primary">
                             <img src="cloud-download.svg" alt="">
