--- a/Syllabus.html
+++ b/Syllabus.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Syllabus - Department of Computer Application</title>
     <link rel="stylesheet" href="styles/syllabusstyle.css">
-    <link rel="shortcut icon" href="styles/emoji.png" type="image/x-icon">
+    <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
 </head>
 
 <body>
