--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resource Version Control</title>
   <link rel="stylesheet" href="styles/stylelastyr.css">
-  <link rel="shortcut icon" href="styles/emoji.png" type="image/x-icon">
+  <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
   <link rel="stylesheet" href="styles/download-lastyr.css">
 </head>
 
