--- a/video_resources.html
+++ b/video_resources.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Resources - Department of Computer Application</title>
     <link rel="stylesheet" href="styles/stylevideo.css">
-    <link rel="shortcut icon" href="styles/emoji.png" type="image/x-icon">
+    <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
