--- a/years/sem3.html
+++ b/years/sem3.html
@@ -70,9 +70,10 @@
             outline: none;
         }
 
-        .head {
+        .head h1{
             margin-top: 10px;
             text-align: center;
+            font-weight: bold;
         }
 
         /* Responsive Styles */
