--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 <li class="contact-icon">
                     <a href="contacts/contact.html"> <img src="styles/icons/world-wide-web (1).png" alt="Contact"
                             id="contact-icon"></a>
-                    
+
+                </li>
+                <li class="contact-icon">
+                    <a href="contacts/contact.html"> <img
+                            src="styles/icons/ios_share_30dp_5985E1_FILL0_wght400_GRAD0_opsz24.svg" alt=""></a>
                 </li>
             </ul>
         </nav>
@@ -101,6 +105,8 @@
     </footer>
 
     <script src="Js/script.js"></script>
+
+
 
 </body>
 
