--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                             id="contact-icon"></a>
 
                 </li>
-                <li class="contact-icon">
+                <!-- <li class="contact-icon">
                     <a href="contacts/contact.html"> <img
                             src="styles/icons/ios_share_30dp_5985E1_FILL0_wght400_GRAD0_opsz24.svg" alt=""></a>
-                </li>
+                </li> -->
             </ul>
         </nav>
     </header>
