--- a/last_year_questions.html
+++ b/last_year_questions.html
@@ -2,149 +2,193 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resource Version Control</title>
-  <link rel="stylesheet" href="styles/stylelastyr.css">
-  <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
-  <link rel="stylesheet" href="styles/download-lastyr.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resource Version Control</title>
+
+    <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/stylelastyr.css">
+
+    <style>
+        body.dark-theme {
+            background-color: #121212;
+            color: #f5f5f5;
+        }
+
+        header h1 {
+            text-align: center;
+            margin: 1rem 0;
+        }
+
+        header nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            padding: 0;
+        }
+
+        header nav ul li {
+            margin: 0 10px;
+        }
+
+        #readme {
+            padding: 1.5rem;
+        }
+
+        #resource-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1.5rem;
+            justify-content: center;
+            padding: 2rem 0;
+        }
+
+        .resource-box {
+            flex: 1 1 calc(33% - 1.5rem);
+            max-width: 320px;
+            min-width: 280px;
+            background-color: #1e1e1e;
+            border: 1px solid #6c757d;
+            border-radius: 8px;
+            padding: 1rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .resource-box:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        }
+
+        .resource-box h3 {
+            text-align: center;
+            margin-bottom: 1rem;
+        }
+
+        .resource-box ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .resource-box ul li {
+            margin: 0.5rem 0;
+        }
+
+        .semester-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 0.5rem;
+            margin: 1rem 0;
+        }
+
+        .semester-button {
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 20px;
+            background-color: #6c757d;
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .semester-button.active {
+          background-color: #28a74677;
+            cursor: default;
+        }
+
+        .semester-button.disabled {
+          background-color: #f40f0f7a;
+            cursor: not-allowed;
+        }
+
+        .semester-button.active:hover {
+            transform: scale(1.05);
+            cursor: pointer;
+            background-color: #28a745;
+        }
+
+        .semester-button.disabled:hover {
+            background-color: #f40f0f;
+            cursor: not-allowed;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #1e1e1e;
+        }
+    </style>
 </head>
+
 <body class="dark-theme">
-  <header>
-    <h1>
-      <a href="index.html" id="home-link">Resource Version Control</a>
-    </h1>
-    <nav>
-      <ul>
-        <li>
-          <a href="contacts/contact.html">
-            <img src="styles/icons/world-wide-web (1).png" alt="Contact" class="contact-icon" id="contact-icon">
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="readme">
-      <h2>README</h2>
+    <header>
+        <h1><a href="index.html" id="home-link">Resource Version Control</a></h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="contacts/contact.html">
+                        <img src="styles/icons/world-wide-web (1).png" alt="Contact" class="contact-icon"
+                            id="contact-icon">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section id="readme">
+            <h2>README</h2>
+            <p>
+                Explore and download coursework materials tailored to each semester. Simply select your year and
+                semester to access organized resources, including previous year question papers and other
+                essential files. Each section provides easy-to-navigate content to support your academic journey. For
+                assistance, visit our contact page through the provided link.
+            </p>
+        </section>
 
-      <p> Here, you can easily access coursework resources for each semester in Excel format. To begin, select your year
-        from the dropdown menu.
+        <section id="resource-list">
+            <div class="resource-box">
+                <h3>First Year</h3>
+                <div class="semester-buttons">
+                    <a href="years/sem1.html">
+                        <button class="semester-button active">Semester 1</button>
+                    </a>
 
-        Once you've made your selection, you'll be able to view and download the resources available for that year and
-        semester.
-
-        Each card represents a specific semester and includes the latest updates and materials available for download.
-
-        You can either click on the "Open Sheet" button to access the most recent versions of the resources or use the
-        swipe gesture to download the PDF format of the sheet.
-
-        If you have any questions or run into any issues, please don’t hesitate to reach out via the contact link
-        provided on the website.</p>
-
-    </section>
-    <section id="resource-list">
-      <h2>Available Resources</h2>
-
-      <div class="dropdown-container">
-        <select id="year-select" class="dropdown-select">
-          <option value="Select Year" disabled selected>Select your Year</option>
-          <option value="year1">Year 1</option>
-          <option value="year2">Year 2</option>
-          <option value="year3">Year 3</option>
-        </select>
-      </div>
-
-      <!-- No Year Selected Message -->
-      <p id="no-year-selected" class="no-year-message">Select your year to view the data resources.</p>
-
-      <div id="year1" class="year-content" style="display:none;">
-        <div class="card-container">
-          <div class="card">
-            <div class="card-header">
-              <h3>Year 1 Sem-1 BSCHCS</h3>
-            </div>
-            <div class="card-body">
-              <a href="years/sem1.html"
-                class="button" >Open</a>
-              <!-- <a href="https://docs.google.com/spreadsheets/d/1j10ulHteStdUGimq3GmW9aZn6i8cqtUZvBg1wf3G7yE/edit?usp=sharing"
-                class="button" download>Open - Sheet</a> -->
-            </div>
-          </div>
-          <!-- <div class="card">
-            <div class="card-header">
-              <h3>Year 1 Sem-2 BSCHCS</h3>
-            </div>
-            <div class="card-body">
-              <a href="https://docs.google.com/spreadsheets/d/1aLZbU11toQHZoNIZCEA8RhFtwDkHUWFt6pd1grnDdUM/edit?usp=sharing"
-                class="button" download>Open - Sheet</a>
-              <div class="swipe-container">
-                <div class="swipe-button"
-                  data-url="https://drive.google.com/uc?export=download&id=1gm9RkUCBIq8LjQumD6s8Miv4ROUkn6lk">
-                  <span class="swipe-text">Swipe to Download</span>
+                    <button class="semester-button disabled">Semester 2</button>
                 </div>
-              </div>
-            </div>
-          </div> -->
-        </div>
-      </div>
 
-      <div id="year2" class="year-content" style="display:none;">
-        <div class="card-container">
-          <div class="card">
-            <div class="card-header">
-              <h3>Year 2 Sem-3 BSCHCS</h3>
             </div>
-            <div class="card-body">
-              <a href="years/sem3.html"
-                class="button">Open</a>
-              <!-- <div class="swipe-container">
-                 <div class="swipe-button"
-                  data-url="https://drive.google.com/file/d/1egwfFP6NNWjPSeaAyahO3sYtMZ8rZOYm/view?usp=sharing">
-                  <span class="swipe-text">Swipe to Download</span>
-                </div> 
-              </div> -->
-            </div>
-          </div>
+            <div class="resource-box">
+                <h3>Second Year</h3>
+                <div class="semester-buttons">
+                    <a href="years/sem3.html">
+                        <button class="semester-button active">Semester 3</button>
+                    </a>
 
-          <!-- <div class="card">
-            <div class="card-header">
-              <h3>Year 2 Sem-4 BSCHCS</h3>
-            </div>
-            <div class="card-body">
-              <a href="https://docs.google.com/spreadsheets/d/1Pz8_pFY6uoCXD9RPlWsHp0EtL1UYZDbS/edit?usp=drive_link"
-                class="button" download>Open - Sheet</a>
-              <div class="swipe-container">
-                <div class="swipe-button"
-                  data-url="https://drive.google.com/uc?export=download&id=1OfDJeGjKt2c-Aw2EAtetqzV2kVbzoyRH">
-                  <span class="swipe-text">Swipe to Download</span>
+                    <button class="semester-button disabled">Semester 4</button>
                 </div>
-              </div>
             </div>
-          </div> -->
-          
-        </div>
-      </div>
+            <div class="resource-box">
+                <h3>Final Year</h3>
+                <div class="semester-buttons">
+                    <button class="semester-button disabled">Semester 5</button>
+                    <button class="semester-button disabled">Semester 6</button>
+                </div>
+            </div>
+        </section>
+    </main>
 
-
-      <div id="year3" class="year-content" style="display:none;">
-        <!-- year 3 data -->
-      </div>
-
-    </section>
-  </main>
-  <footer>
-    <a href="index.html">
-      <p>&copy; 2024 Resource Version Control</p>
-    </a>
-    <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
-  </footer>
-
-  <!-- Add JavaScript file or inline script -->
-  <script src="Js/scriptlastyr.js">
-  </script>
-  
+    <footer>
+        <a href="index.html">
+            <p>&copy; 2024 Resource Version Control</p>
+        </a>
+        <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
+    </footer>
 </body>
 
 </html>
