updates share button

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                             id="contact-icon"></a>
 
                 </li>
-                <!-- <li class="contact-icon">
-                    <a href="contacts/contact.html"> <img
-                            src="styles/icons/ios_share_30dp_5985E1_FILL0_wght400_GRAD0_opsz24.svg" alt=""></a>
-                </li> -->
+                <li class="contact-icon">
+                    <img onclick="sharePage()" src="styles/icons/ios_share_30dp_5985E1_FILL0_wght400_GRAD0_opsz24.svg"
+                        alt="Share">
+                </li>
             </ul>
         </nav>
     </header>
@@ -104,9 +104,9 @@
         </ul>
     </footer>
 
-    <script src="Js/script.js"></script>
+    <script src="Js/script.js">
 
-
+    </script>
 
 </body>
 
