updated notification menu as well as removed scolarship menue

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         </section>
         <div class="infobullet">
             <div class="info_type">
-                <a href="scholarship.html" class="info_type"><img src="styles/icons/notifi_bl.svg" alt=""
-                        class="img_light">
+                <a class="info_type">
+                    <img src="styles/icons/notifi_bl.svg" alt="" class="img_light">
                     <img src="styles/icons/not_yl.svg" alt="" class="img_dark">
-                    <p>Scholarship Forms are live</p>
+                    <p>No new updates</p>
                 </a>
             </div>
         </div>
@@ -69,10 +69,10 @@
             <h2>📄 Previous-years / Course Books</h2>
             <p>Find the previous year's exam papers here.</p>
         </section>
-        <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
+        <!-- <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
             <h2> 💲 Scholarship </h2>
             <p>Renewe your Scholarship</p>
-        </section>
+        </section> -->
         <section id="last-year-questions" class="content-section" onclick="window.location.href='software.html';">
             <h2>⎋ Softwares</h2>
             <p>Discover Software Tools Relevant to Your Courses</p>
