updated footer / icons

--- a/index.html
+++ b/index.html
@@ -66,42 +66,56 @@
 
         <section id="last-year-questions" class="content-section"
             onclick="window.location.href='last_year_questions.html';">
-            <h2>📄 Previous-years / Course Books</h2>
-            <p>Find the previous year's exam papers here.</p>
+
+            <h2><img class="svgd" src="styles/icons/docb.svg" alt=""> <img class="svgl" src="styles/icons/docw.svg"
+                    alt="">&nbsp;Previous-years / Course Books</h2>
+            <h4>Find the previous year's exam papers here.</h4>
         </section>
         <!-- <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
             <h2> 💲 Scholarship </h2>
             <p>Renewe your Scholarship</p>
         </section> -->
         <section id="last-year-questions" class="content-section" onclick="window.location.href='software.html';">
-            <h2>⎋ Softwares</h2>
-            <p>Discover Software Tools Relevant to Your Courses</p>
+            <h2><img class="svgd" src="styles/icons/softl.svg" alt=""> <img class="svgl" src="styles/icons/softd.svg"
+                    alt="">&nbsp; Softwares</h2>
+            <h4>Discover Software Tools Relevant to Your Courses</h4>
         </section>
         <section id="video-resources" class="content-section" onclick="window.location.href='video_resources.html';">
-            <h2>🎥 Video Resources</h2>
-            <p>Access helpful video tutorials and lectures.</p>
+            <h2> <img class="svgd" src="styles/icons/vidd.svg" alt=""> <img class="svgl" src="styles/icons/vidl.svg"
+                    alt="">&nbsp;Video Resources</h2>
+            <h4>Access helpful video tutorials and lectures.</h4>
         </section>
         <section id="syllabus" class="content-section" onclick="window.location.href='Syllabus.html';">
-            <h2>📖 Course Syllabus</h2>
-            <p>Review the course syllabus.</p>
+            <h2><img class="svgd" src="styles/icons/coursed.svg" alt=""> <img class="svgl"
+                    src="styles/icons/coursel.svg" alt="">&nbsp; Course Syllabus</h2>
+            <h4>Review the course syllabus.</h4>
         </section>
         <section id="results" class="content-section"
             onclick="window.location.href='https://result.ccsuniversity.ac.in/regpvt2013.php';">
-            <h2> 📜 Results</h2>
-            <p>Have a look at your hard work.</p>
+            <h2> <img class="svgd" src="styles/icons/resl.svg" alt=""> <img class="svgl" src="styles/icons/resd.svg"
+                    alt="">&nbsp;Results</h2>
+            <h4>Have a look at your hard work.</h4>
         </section>
     </main>
 
     <footer>
-        <p class="contact-footer"><a href="https://scriet.ccsuniversity.ac.in/">&copy; 🏫 Department of Computer
-                Application</a></p>
-        <!-- <p>&copy; 🏫 Department of Computer Application</p> -->
-        <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
-        <ul class="social-media">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-        </ul>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>About Us</h3>
+                <p><a href="https://scriet.ccsuniversity.ac.in/">Department of Computer Application</a></p>
+                <p>We provide comprehensive resources for B.Sc (Hons) Computer Science students, including previous year
+                    question papers, software tools, video tutorials, and course syllabus.</p>
+            </div>
+            <div class="footer-section developer">
+                <h3>Developer</h3>
+                <p>Developed by Jatin. For any queries or support, please reach out via email at <a
+                        href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbhDtjvhFLVtLFdBZCbzNLmpztNNrxpMrzptPSqRMQHffmfmS"  target="_blank">gerajatin@icloud.com</a>
+                    or visit our <a href="contacts/contact.html">Contact Page</a> for more information.</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 Department of Computer Application. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="Js/script.js">
